--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
       Close the server, and it will close the connection. 
       You must remember that your server changes ports every time you open the download. 
       Remember, you are a hacker. So you must always share your port number; that way, it is very secure. <br>
+    <br>
+    created by Brian Wesson 
     </p> </p><br></h1>
   </body>
 </html>
