--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Download Darkchat</h1>                                                              <h2># of downloads 2006</h2>
+      <h1>Download Darkchat</h1>
+      <h2># of downloads 5304</h2>
       <p>Scroll down for How To</p>
       <p>Choose your platform:</p>
       <div class="downloads">
