--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darkchat</title>
+    <title>DarkText</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-      <h1>Download Darkchat</h1>
-      <h2># of downloads 9113</h2>
+      <h1>Download DarkText</h1>
+      <div class="counter">
+        <span class="count">0</span>
+        <span class="text"># Downloads</span>
+      </div>
+      
       <p>Scroll down for How To</p>
       <p>Choose your platform:</p>
       <div class="downloads">
@@ -74,9 +78,7 @@
             </div>
           </div>
         </a>
-        <img src="1.png" alt="A beautiful image" width="250" height="150">
-        <img src="2.png" alt="A beautiful image" width="250" height="150">
-
+        
 
         <a href="dark_clients_chat-linux.zip" download>
           <div class="download-card">
@@ -105,8 +107,7 @@
       Close the server, and it will close the connection. 
       You must remember that your server changes ports every time you open the download. 
       Remember, you are a hacker. So you must always share your port number; that way, it is very secure. <br>
-    <br>
-    created by Brian Wesson 
     </p> </p><br></h1>
+    <script src="script.js"></script>
   </body>
 </html>
