--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DarkText</title>
+    <title>DarkChat</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-      <h1>Download DarkText</h1>
+      <h1>Download DarkChat</h1>
       <div class="counter">
         <span class="count">0</span>
         <span class="text"># Downloads</span>
