--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Scroll down for How To</p>
       <p>Choose your platform:</p>
       <div class="downloads">
-        <a href="chat-server-win.zip" download>
+        <a href="dark-server-win.zip" download>
           <div class="download-card">
             <div class="download-icon windows"></div>
             <div class="download-info">
